feat: update tkf strategy demo and category menus